--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
 			</fieldset>
 		</form>
 
-		<footer class="footer">
+		<div class="footer">
 			<p>Already have an account? <a href="/login">Login</a></p>
-		</footer>
+		</div>
+
+		<!-- display source code -->
+	<footer><a href="https://github.com/waptik/analogsea/" target="_blank">Source Code</a></footer>
 
 </body>
 </html>
